# harvesters

./: LICENSE  README.md  pyproject.toml
acdh/resourceCatalog/harvester/: Dataset.py  DatasetInstance.py  Person.py  Project.py  Redmine.py
