[tool.poetry]
name = "harvesters"
version = "0.1.0"
description = "Harvesters for the ACDH-CH ResourceCatalog service"
authors = ["Mateusz Żółtak <mateusz.zoltak@oeaw.ac.at>"]
license = "MIT"
repository = "https://github.com/repo-landscape/harvesters"
packages = [
    {include = "acdh/resourceCatalog"}
]

[tool.poetry.scripts]
rl-harvest-redmine = "acdh.resourceCatalog.harvester.Redmine:run"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
